[package]
name = "quasar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Fast, Reliable, and Secure Programming Language for LLM Agents with Code Actions"
homepage = "https://github.com/stockedge/QUASER-RS"
repository = "https://github.com/stockedge/QUASER-RS"
readme = "README.md"
keywords = ["programming-language", "llm", "agent", "async", "security"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = { version = "4.0", features = ["serde"] }
futures = "0.3"
